--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -11,6 +11,31 @@
         margin: 0;
         background-color: rgb(58, 110, 165);
       }
+      * {
+        font-size: 10.5px;
+      }
+      textarea:focus, input:focus, select:focus{
+        outline: none;
+      }
+      select option {
+        padding-left: 5px;
+      }
+      select option[selected]{
+        font-weight: bold;
+      }
+      select::before {
+        padding-left: 5px;
+        content: var(--colheader, none);
+        display: block;
+        position: sticky;
+        top: var(--colheadertop, 0);
+        left: 0;
+        /* min-width: 10rem; */
+        /* height: var(--height, auto); */
+        /* padding: 3px; */
+        background-color: black;
+        color: silver;
+      }
       .webamp--img {
         background-image: var(--background-image);
         background-position: var(--background-position);
