--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -11,7 +11,7 @@
         margin: 0;
         background-color: rgb(58, 110, 165);
       }
-      * {
+      textarea, input, select {
         font-size: 10.5px;
       }
       textarea:focus, input:focus, select:focus{
@@ -19,6 +19,7 @@
       }
       select option {
         padding-left: 5px;
+        width: 300%;
       }
       select option[selected]{
         font-weight: bold;
@@ -70,6 +71,7 @@
         text-align: center;
       }
     </style>
+    <style id="scrollbar-css"></style>
   </head>
   <body>
     <h1 id="status">Downloading JavaScript...</h1>
