+various maki function implementations

--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -70,6 +70,9 @@
         left: 0;
         text-align: center;
       }
+      [tabindex]:focus {
+        box-shadow: inset 2px 2px red;
+      }
     </style>
     <style id="scrollbar-css"></style>
   </head>
