--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -39,21 +39,22 @@
       }
       .webamp--img {
         background-image: var(--background-image);
-        background-position: var(--background-position);
+        background-position: top 0 left 0;
+        /* background-position: var(--background-position); */
       }
       .webamp--img:active {
         background-image: var(--active-background-image, var(--background-image));
-        background-position: var(--active-background-position, var(--background-position));
+        /* background-position: var(--active-background-position, var(--background-position)); */
       }
       .webamp--img:hover {
         background-image: var(--hover-background-image, var(--background-image));
-        background-position: var(--hover-background-position, var(--background-position));
+        /* background-position: var(--hover-background-position, var(--background-position)); */
       }
 
       /* TODO: Should this fallback to hover? */
       .webamp--img:hover:active {
         background-image: var(--active-background-image, var(--background-image));
-        background-position: var(--active-background-position, var(--background-position));
+        /* background-position: var(--active-background-position, var(--background-position)); */
       }
 
       #experimental {
@@ -71,7 +72,7 @@
         text-align: center;
       }
       [tabindex]:focus {
-        box-shadow: inset 2px 2px red;
+        box-shadow: inset 0 0 3px red;
       }
     </style>
     <style id="scrollbar-css"></style>
