--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -43,7 +43,7 @@
         /* background-position: var(--background-position); */
       }
       .webamp--img:active {
-        background-image: var(--active-background-image, var(--background-image));
+        background-image: var(--down-background-image, var(--background-image));
         /* background-position: var(--active-background-position, var(--background-position)); */
       }
       .webamp--img:hover {
@@ -53,6 +53,10 @@
 
       /* TODO: Should this fallback to hover? */
       .webamp--img:hover:active {
+        background-image: var(--down-background-image, var(--background-image));
+      }
+
+      .webamp--img.active {
         background-image: var(--active-background-image, var(--background-image));
         /* background-position: var(--active-background-position, var(--background-position)); */
       }
