--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -79,6 +79,7 @@
         box-shadow: inset 0 0 3px red;
       }
     </style>
+    <style id="bitmap-css"></style>
     <style id="scrollbar-css"></style>
   </head>
   <body>
