sum up: zero error, tested MMD3

--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -80,7 +80,7 @@
       [tabindex]:focus {
         box-shadow: inset 0 0 3px red;
       }
-      * {position: absolute;}
+      div {position: absolute;}
     </style>
     <style id="bitmap-css"></style>
     <style id="scrollbar-css"></style>
