--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -37,7 +37,6 @@
         background-color: black;
         color: silver;
       }
-      layout,
       .webamp--img {
         background-image: var(--background-image);
         background-position: top 0 left 0;
@@ -84,6 +83,9 @@
         border: none;
         background: transparent;
         padding: 0;
+      }
+      slider {
+        overflow: hidden;
       }
       text {
         overflow: hidden;
