bitmap fallback +wasabi:button

--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -95,7 +95,7 @@
         position: relative;
       }
       layout, group, layer, animatedlayer, button, slider, text,
-      colorthemeslist
+      wasabiframe, colorthemeslist
       {
         position: absolute;
         left: 0;
@@ -106,6 +106,9 @@
         position: unset;
         display: block;
       } */
+      .wasabi-button {
+        background-image: var(--bitmap-studio-button-middle);
+      }
     </style>
     <style id="bitmap-css"></style>
     <style id="scrollbar-css"></style>
