preparing to add winampconfig.mi

--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -135,6 +135,10 @@
         background: fuchsia;
         flex-grow: 1;
       } */
+      .autowidthsource {width: auto;}
+      .autowidthsource > text{
+        width: auto !important;
+      }
     </style>
     <style id="bitmap-css"></style>
     <style id="scrollbar-css"></style>
