lets see ghosts by localhost:8080/?debug

--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -11,6 +11,12 @@
         margin: 0;
         background-color: rgb(58, 110, 165);
       }
+      body.debug > div * {
+        box-shadow: inset 0 0 0px 1px #00bcd4;
+      }
+      body.debug container {
+        box-shadow: inset 0 0 0px 1px red;
+      }
       textarea, input, select {
         font-size: 10.5px;
       }
