add 10px padding to body

--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -10,6 +10,12 @@
       body {
         margin: 0;
         background-color: rgb(58, 110, 165);
+        position: relative;
+        left: 10px;
+        top: 10px;
+        /* inset: 10px; */
+        height: calc(100vh - 21px);
+        width: calc(100vw - 21px);
       }
       body.debug > div * {
         box-shadow: inset 0 0 0px 1px #00bcd4;
