--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -110,7 +110,7 @@
       container{
         position: relative;
       }
-      layout, grid, group, layer, animatedlayer, button, slider, text,
+      layout, grid, progressgrid, group, layer, animatedlayer, button, slider, text,
       wasabiframe, colorthemeslist
       {
         position: absolute;
@@ -118,9 +118,11 @@
         top: 0;
         display: block;
       }
-      grid left, grid right {height: 100%; display: block; background-image: var(--background-image); position: absolute;}
-      grid left {left: 0;}
-      grid right {right: 0;}
+      grid, progressgrid {display: flex;}
+      grid *, progressgrid * {height: 100%; background-image: var(--background-image); }
+      grid middle{flex-grow: 1;}
+      /* grid left, gridprogress left {left: 0;}
+      grid right, gridprogress right {right: 0;} */
       /* body > div select>option {
         position: unset;
         display: block;
