--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -160,6 +160,16 @@
       .autowidthsource > text{
         width: auto !important;
       }
+
+      /* text#infoticker{
+        display: block !important;
+      }
+      text#songticker{
+        display: none !important;
+      } */
+      #main #seekerghost {
+        opacity: .7;
+      }
     </style>
     <style id="bitmap-css"></style>
     <style id="scrollbar-css"></style>
