bring back the <grid> aka Tabsheet

--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -101,6 +101,8 @@
       }
       text {
         overflow: hidden;
+        box-sizing: border-box;
+        /* padding: 8px 0; */
       }
       text i{
         pointer-events: none;
