+BitmapFont = Bitmap (has gammaset)

--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -108,6 +108,9 @@
         pointer-events: none;
         font-style:normal;
       }
+      text span{
+        background-image: inherit;
+      }
       /* body > div *  */
       container{
         position: relative;
