--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -116,12 +116,15 @@
         position: relative;
       }
       layout, grid, progressgrid, group, layer, animatedlayer, button, slider, text,
-      wasabiframe, colorthemeslist
+      wasabiframe, wasabititlebar, colorthemeslist
       {
         position: absolute;
         left: 0;
         top: 0;
         display: block;
+      }
+      wasabititlebar {
+        text-align: center;
       }
       grid, progressgrid {display: flex;}
       grid *, progressgrid * {height: 100%; background-image: var(--background-image); }
