bugfix drawer's tabsheet & overall text

--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -102,7 +102,8 @@
       text {
         overflow: hidden;
         box-sizing: border-box;
-        /* padding: 8px 0; */
+        text-align: center;
+        /* padding: 2px; */
       }
       text i{
         pointer-events: none;
@@ -110,6 +111,7 @@
       }
       text span{
         background-image: inherit;
+        vertical-align: bottom;
       }
       /* body > div *  */
       container{
@@ -165,9 +167,9 @@
         flex-grow: 1;
       } */
       .autowidthsource {width: auto;}
-      .autowidthsource > text{
+      /* .autowidthsource > text{
         width: auto !important;
-      }
+      } */
 
       /* text#infoticker{
         display: block !important;
