text can't be selected (by cursor)

--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -110,6 +110,8 @@
         font-style:normal;
       }
       text span{
+        user-select: none;
+        pointer-events: none;
         display: inline-block;
         background-image: inherit;
         vertical-align: bottom;
