--- a/packages/webamp-modern-2/src/index.html
+++ b/packages/webamp-modern-2/src/index.html
@@ -109,6 +109,11 @@
         pointer-events: none;
         font-style:normal;
       }
+      text wrap {
+        background-image: inherit;
+        background-size: 0px;
+        position: relative;
+      }
       text span{
         user-select: none;
         pointer-events: none;
